--- a/página/assets/css/css.css
+++ b/página/assets/css/css.css
@@ -1,30 +1,328 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poiret+One&display=swap');
+:root {
+    --background-color: #58585828;
+}
+
 .logo{
-    width: 120px;
-    height: 100px;
+    width: 50px;
+    height: 50px;
+    padding: 10px;
 }
 
-a, a:visited {
+section {
+    padding-top: 35px;
+    padding-bottom: 35px;
+}
+
+a, a:link, a:visited, .nav-link, a.nav-link {
     text-decoration: none;
-    color: black;
+    color: rgb(0, 0, 0) !important;
 }
 
-a:hover, a:visited:hover {
-    color: gray;
+a:hover, a:visited:hover, .nav-link:hover {
+    color: rgb(0, 0, 0) !important;
 }
 
 .banner {
     background-image: url("../imgs/banner.jpg");
-    height: 600px;
+    height: 500px;
+    background-size: cover;
 }
 .banner_texto {
-    color: white;
     padding-top: 150px;
-    font-size: 70px;
-    padding: 0;
     padding-left: 40px;
+    text-shadow: #000000 -3px 3px 5px;
 }
 .banner_subtexto {
-    color: white;
-    font-size: 30px;
     padding-left: 40px;
+    text-shadow: #000000 -3px 3px 3px;
+}
+
+.card {
+    padding: 12px;
+}
+
+.banner_section {
+    padding-top: 0;
+}
+
+h2, h1, p{
+    font-family: Poiret One, cursive;
+}
+
+.section-texto {
+    font-size: 23px;
+    width: 700px;
+}
+
+.servicos-texto {
+    max-width: 480px;
+    font-size: 23px;
+}
+
+.servicos-botao {
+    max-width: 200px;
+}
+
+.section-servicos {
+    padding-right: 130px;
+    padding-left: 130px;
+}
+
+.servicos-img {
+    max-width: 800px;
+}
+
+/* Footer */
+.footer {
+    border-top: 1px solid rgba(88, 88, 88, 0.3);
+    margin-top: 50px;
+    padding: 40px 20px 20px;
+    text-align: center;
+}
+
+.footer-content {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    gap: 30px;
+    margin-bottom: 30px;
+}
+
+.footer-section {
+    flex: 1;
+    min-width: 200px;
+}
+
+.footer-section h3 {
+    font-size: 24px;
+    margin-bottom: 10px;
+    color: #000;
+}
+
+.footer-section h4 {
+    font-size: 16px;
+    font-family: Poiret One, cursive;
+    font-weight: 800;
+    margin-bottom: 15px;
+    color: #000;
+}
+
+.footer-section p {
+    font-size: 14px;
+    margin-bottom: 8px;
+    color: #333;
+}
+
+.footer-section a {
+    display: block;
+    font-size: 14px;
+    margin-bottom: 8px;
+    color: #000 !important;
+    text-decoration: none;
+}
+
+.footer-section a:hover {
+    color: #555 !important;
+}
+
+.footer-bottom {
+    text-align: center;
+    padding-top: 20px;
+    border-top: 1px solid rgba(88, 88, 88, 0.2);
+    font-size: 12px;
+    color: #666;
+}
+
+@media (max-width: 1024px) {
+    .card {
+        margin-right: 27px;
+        margin-left: 27px;
+    }
+
+    .sobre-img {
+        width: 450px;
+    }
+}
+
+@media (max-width: 768px) {
+    .card {
+        margin-right: 0px;
+        margin-left: 0px;
+    }
+
+    #sobre .section-texto {
+        font-size: 18px;
+        order: 0;
+        width: 100%;
+        text-align: center;
+    }
+
+    #sobre .sobre-img {
+        width: 370px;
+    }
+
+    .servicos-botao {
+        margin-bottom: 10px;
+    }
+
+    .footer-content {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .footer-section {
+        flex: 1 1 100%;
+        min-width: 100%;
+    }
+}
+
+@media (max-width: 426px) {
+
+    .banner {
+        height: 250px;
+    }
+    .banner_texto {
+        padding-left: 0px;
+        font-size: 40px;
+    }
+    .banner_subtexto {
+        font-size: 20px;
+        padding-left: 0px;
+    }
+
+    .section-texto{
+        font-size: 18px;
+    }
+
+    .card {
+        flex: 1 1 calc(50% - 10px);
+        min-width: 250px;
+    }
+
+    /* Seção Sobre: colocar texto acima da imagem em telas pequenas */
+    #sobre .d-flex {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #sobre .section-texto {
+        order: 0;
+        width: 100%;
+        text-align: center;
+    }
+
+    #sobre .sobre-img {
+        width: 370px;
+    }
+
+    .section-sobre {
+        flex-direction: column;
+    }
+
+    .sobre-img {
+        width: 300px;
+    }
+
+    .section-servicos {
+        padding-right: 0px;
+        padding-left: 0px;
+        flex-direction: column;
+    }
+
+    .section-servicos p{
+        max-width: 100%;
+    }
+
+    .servicos-botao {
+        margin-bottom: 10px;
+    }
+
+    .footer-section h3 {
+        font-size: 20px;
+    }
+
+    .footer-section h4 {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 321px) {
+    p, .section-texto {
+        font-size: 18px;
+    }
+
+    h2 {
+        font-size: 23px;
+    }
+
+    .banner {
+        height: 250px;
+    }
+    .banner_texto {
+        padding-left: 0px;
+        font-size: 40px;
+    }
+    .banner_subtexto {
+        font-size: 20px;
+        padding-left: 0px;
+    }
+    .nav-link {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .sobre-img {
+        display: none;
+    }
+
+    .sobre-texto {
+        margin-right: 10px;
+        margin-left: 10px;
+    }
+
+    .card-grupo {
+        padding: 0px;
+    }
+
+    .card {
+        width: 8rem;
+        max-width: 8rem;
+        padding: 0px;
+        margin-bottom: 10px;
+    }
+
+    .card-img-top {
+        height: 300px;
+    }
+
+    .section-servicos {
+        padding-right: 0px;
+        padding-left: 0px;
+        flex-direction: column;
+    }
+
+    .section-servicos p{
+        max-width: 100%;
+    }
+
+    .footer {
+        margin-top: 30px;
+        padding: 30px 15px 15px;
+    }
+
+    .footer-content {
+        gap: 15px;
+        margin-bottom: 20px;
+    }
+
+    .footer-section h3 {
+        font-size: 18px;
+    }
+
+    .footer-section h4, .footer-section p, .footer-section a {
+        font-size: 12px;
+    }
 }
